--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "vitest": "^3.2.4"
   },
   "dependencies": {
+    "gsap": "^3.13.0",
     "vite-plugin-handlebars": "^2.0.0",
     "vite-plugin-svg-spriter": "^1.0.0"
   }
